# ABSANLPFN

./: README.md  check_cuda.py  flow-cnn-bilstm-multitask-plan.md  flow-multitask-diagram.md  pyproject.toml
outputs/train-bert/20260528-222516/: best_params_pso.json  final_metrics.json  report.md  run_config.json  training_history.csv
outputs/train-bert/20260528-232134/: best_params_pso.json  final_metrics.json  report.md  run_config.json  training_history.csv
outputs/train-lstm/20260528-235501/: best_params_pso.json  final_metrics.json  report.md  run_config.json  training_history.csv
outputs/train/20260528-211023/: final_metrics.json  report.md  run_config.json  training_history.csv
presentation/: README.md  SPEAKER_NOTES.md  index.html
presentation/assets/diagrams/: 01-pipeline-flow.excalidraw  02-model-lstm-layers.excalidraw  03-data-preprocessing.excalidraw  04-model-bert-layers.excalidraw  05-multitask-loss.excalidraw
presentation/css/: custom.css
presentation/tools/: gen_excalidraw_diagrams.py
src/absa_multitask/: compare.py  data.py  model.py  textproc.py  train.py  transformer_model.py  tune.py
